# csound

./: .gitignore  CMakeLists.txt  README.md  all_string_files  fix_includes.sh  map.imp  vcpkg.json
Executables/: CMakeLists.txt
Executables/Bela/: BelaCsound.cpp  main.cpp
Executables/atsa/: CMakeLists.txt
Executables/cs/: CMakeLists.txt
Executables/csanalyze/: csanalyze.c
Executables/csb64enc/: base64.c  base64.h  csb64enc.c
Executables/csbeats/: CMakeLists.txt  beats.h  beats.l  beats.y  beats_main.c  beats_main.h  beatslex.yy.h
Executables/csdebugger/: CMakeLists.txt
Executables/csound-bin/: CMakeLists.txt  csound_main.c  sched.c  sched.h
Executables/cvanal/: CMakeLists.txt
Executables/dnoise/: CMakeLists.txt
Executables/envext/: CMakeLists.txt
Executables/extract/: xmain.c
Executables/extractor/: CMakeLists.txt
Executables/het_export/: CMakeLists.txt
Executables/het_import/: CMakeLists.txt
Executables/hetro/: CMakeLists.txt  hetro.c
Executables/lpanal/: CMakeLists.txt
Executables/lpc_export/: CMakeLists.txt
Executables/lpc_import/: CMakeLists.txt
Executables/makecsd/: CMakeLists.txt  makecsd.c
Executables/mixer-bin/: CMakeLists.txt
Executables/pv_export/: CMakeLists.txt
Executables/pv_import/: CMakeLists.txt
Executables/pvanal/: CMakeLists.txt
Executables/pvlook/: CMakeLists.txt  pvl_main.c
Executables/scale/: CMakeLists.txt
Executables/scot/: scot.h  scot_main.c
Executables/scsort/: smain.c
Executables/sdif2ad/: CMakeLists.txt
Executables/sndinfo/: CMakeLists.txt
Executables/src_conv/: CMakeLists.txt  new_srconv.c
Executables/srconv/: CMakeLists.txt
H/: aops.h  (+93 more)
Plugins/: CMakeLists.txt
Plugins/Vosim/: CMakeLists.txt  Vosim.c
Plugins/ambicode/: CMakeLists.txt  ambicode.c
Plugins/ambicode1/: CMakeLists.txt  ambicode1.c
Plugins/ampmidid/: CMakeLists.txt  ampmidid.cpp
Plugins/arrayops/: CMakeLists.txt  arrayops.cpp
Plugins/bformdec2/: CMakeLists.txt  bformdec2.cpp
Plugins/buchla/: CMakeLists.txt  buchla.c
Plugins/cellular/: CMakeLists.txt  cellular.c
Plugins/cmidi/: CMakeLists.txt  cmidi.c
Plugins/control/: CMakeLists.txt  control.c
Plugins/counter/: CMakeLists.txt  counter.c
Plugins/cpumeter/: CMakeLists.txt  cpumeter.c
Plugins/cross2/: CMakeLists.txt  cross2.c  cross2.h  ptrigtbl.h
Plugins/date/: CMakeLists.txt  date.c
Plugins/dcblockr/: CMakeLists.txt  dcblockr.c  dcblockr.h
Plugins/deprecated/: CMakeLists.txt  deprecated.c
Plugins/doppler/: CMakeLists.txt  doppler.cpp
Plugins/dssi4cs/: CMakeLists.txt  dssi.h  dssi4cs.c  dssi4cs.h  ladspa.h  load.c  utils.h
Plugins/exciter/: CMakeLists.txt  exciter.c
Plugins/fareyseq/: CMakeLists.txt  fareyseq.c
Plugins/filter/: CMakeLists.txt  filter.c  filter.h
Plugins/fractalnoise/: CMakeLists.txt  fractalnoise.cpp
Plugins/framebuffer/: CMakeLists.txt  framebuffer.c
Plugins/freeverb/: CMakeLists.txt  freeverb.c
Plugins/ftconv/: CMakeLists.txt  ftconv.c
Plugins/ftsamplebank/: CMakeLists.txt  ftsamplebank.cpp
Plugins/gammatone/: CMakeLists.txt  gammatone.c
Plugins/ipmidi/: CMakeLists.txt  ipmidi.c
Plugins/joystick/: CMakeLists.txt  linuxjoystick.c
Plugins/liveconv/: CMakeLists.txt  liveconv.c
Plugins/lsfr/: CMakeLists.txt  lfsr.cpp
Plugins/lufs/: CMakeLists.txt  lufs.c
Plugins/metro/: CMakeLists.txt  metro.c
Plugins/minmax/: CMakeLists.txt  minmax.c
Plugins/mixer/: CMakeLists.txt  mixer.cpp
Plugins/modmatrix/: CMakeLists.txt  modmatrix.c
Plugins/osc/: CMakeLists.txt  OSC.c
Plugins/padsynth/: CMakeLists.txt  padsynth_gen.cpp
Plugins/platerev/: CMakeLists.txt  platerev.c
Plugins/pmidi/: CMakeLists.txt  pmidi.c
Plugins/pvsgendy/: pvsgendy.c
Plugins/pvsops/: CMakeLists.txt  pvsops.cpp
Plugins/rtalsa/: CMakeLists.txt  rtalsa.c
Plugins/rtauhal/: CMakeLists.txt  rtauhal.c
Plugins/rtcoreaudio/: CMakeLists.txt
Plugins/rthaiku/: CMakeLists.txt  HaikuAudio.cpp  HaikuMidi.cpp  rthaiku.cpp
Plugins/rtjack/: CMakeLists.txt  rtjack.c  rtjack.h
Plugins/rtpa/: CMakeLists.txt  rtpa.c
Plugins/rtpulse/: CMakeLists.txt  rtpulse.c
Plugins/rtwinmm/: CMakeLists.txt  rtwinmm.c
Plugins/scansyn/: CMakeLists.txt  scansyn.c  scansyn.h  scansynx.c  scansynx.h
Plugins/scoreline/: CMakeLists.txt  scoreline.c
Plugins/select/: CMakeLists.txt  select.c
Plugins/seqtime/: CMakeLists.txt  seqtime.c
Plugins/serial/: CMakeLists.txt  serial.c
Plugins/signalflowgraph/: CMakeLists.txt  signalflowgraph.cpp
Plugins/space/: CMakeLists.txt  space.c  space.h
Plugins/spat3d/: CMakeLists.txt  spat3d.c  spat3d.h
Plugins/squinewave/: CMakeLists.txt  squinewave.c
Plugins/stdutil/: CMakeLists.txt  atsa.c  atsa.h  cvanal.c  cvanal.h  dnoise.c  dnoise.h  envext.c  envext.h  het_export.c  het_export.h  het_import.c  het_import.h  hetro.c  hetro.h  lpanal.c  lpanal.h  lpc_export.c  lpc_export.h  lpc_import.c  lpc_import.h  mixer.c  mixer.h  pv_export.c  pv_export.h  pv_import.c  pv_import.h  pvanal.c  pvanal.h  pvlook.c  pvlook.h  scale.c  scale.h  sndinfo.c  sndinfo.h  srconv.c  srconv.h  std_util.h  xtrct.c  xtrct.h
Plugins/sterrain/: CMakeLists.txt  sterrain.c
Plugins/syncgrain/: CMakeLists.txt  syncgrain.c  syncgrain.h
Plugins/system_call/: CMakeLists.txt  system_call.c
Plugins/tabaudio/: CMakeLists.txt  tabaudio.c
Plugins/tabsum/: CMakeLists.txt  tabsum.c
Plugins/trigenvsegs/: CMakeLists.txt  trigEnvSegs.cpp
Plugins/ugakbari/: CMakeLists.txt  ugakbari.c
Plugins/ugens9/: CMakeLists.txt  ugens9.c
Plugins/ugensa/: CMakeLists.txt  ugensa.c  ugensa.h
Plugins/ugmoss/: CMakeLists.txt  ugmoss.c  ugmoss.h
Plugins/ugnorman/: CMakeLists.txt  ugnorman.c  ugnorman.h
Plugins/ugsc/: CMakeLists.txt  ugsc.c
Plugins/urandom/: CMakeLists.txt  urandom.c
Plugins/vaops/: CMakeLists.txt  vaops.c
Plugins/vbap/: CMakeLists.txt  vbap.c  vbap_n.c  vbap_n.h  vbap_zak.c  vbap_zak.h
Plugins/wave-terrain/: CMakeLists.txt  wave-terrain.c  wave-terrain.h
Plugins/wpfilters/: CMakeLists.txt  wpfilters.c
Plugins/wterrain2/: CMakeLists.txt  wterrain2.c
Plugins/zak/: CMakeLists.txt  zak.c
tests/: CMakeLists.txt
(+580 files in other folders)
